--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koa-webapp",
   "version": "1.0.0",
-  "description": "",
+  "description": "ToDo Lista para jugar con APIs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,6 +11,15 @@
     "name": "Nahuel Lema",
     "email": "lema.nahuel@gmail.com",
     "url": "https://www.linkedin.com/in/nahuellema/"
+  },
+  "homepage": "https://nl-koa-www.herokuapp.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lemanahuel/nl-static-web"
+  },
+  "engines": {
+    "node": "11.x.x",
+    "npm": "6.x.x"
   },
   "license": "ISC",
   "dependencies": {
