--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "node": "11.x.x",
     "npm": "6.x.x"
   },
-  "license": "BY-NC-SA",
+  "license": "CC-BY-NC-SA-4.0",
   "dependencies": {
     "forever": "^0.15.3",
     "static-server": "^2.2.1"
